Fixed infobox collapse icon and animation

--- a/assets/scss/partials/layout/article.scss
+++ b/assets/scss/partials/layout/article.scss
@@ -420,7 +420,7 @@
             text-align: center;
             font-weight: bold;
 
-            &.h1 { font-size: 1.25em; }
+            &.h1 { font-size: 1.25em; vertical-align: bottom; }
             &.h2 { font-size: 1.02em; }
             &.h3 { font-size: 0.9em; }
             &.h4 { font-size: 0.85em; }
@@ -432,21 +432,20 @@
             &:hover { cursor: pointer; }
         }
         summary {
-            display: block;
             padding: 0px 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 2px;
             &::-webkit-details-marker { display: none; }
-
-            span {
+            
+            .icon {
                 display: flex;
                 align-items: center;
-                justify-content: center;
-                gap: 6px;
-
-                &::after {
-                    content: "»";
-                    display: flex;
-                    align-items: center;
-                    transition: rotate 400ms ease-out;
+                svg {
+                    transition: rotate 200ms ease-out;
+                    height: 14px;
+                    width: 14px;
                 }
             }
         }
@@ -455,27 +454,28 @@
             background-color: var(--card-background);
             border-radius: var(--box-border-radius);
             padding: 8px;
+            margin-top: 10px;
             font-size: 0.8em;
 
             &.collapsible {
-                box-sizing: border-box;
-                max-height: 0;
-                display: none;
-                opacity: 0;
+                padding: 0px;
                 overflow: hidden;
-                transition: max-height 600ms ease-out;
+                max-height: 0;
+                opacity: 0;
+                transform: translateY(0px);
+                transition: max-height 400ms ease-out, opacity 200ms ease-in, 0.6s transform ease, 700ms padding 100ms ease-out;
             }
         }
-        details[open] + .infobox-content {
-            display: block;
+        details[open] + .infobox-content.collapsible {
+            padding: 8px;
             max-height: 1000px; /* Set a max-height value enough to show all the content */        
             opacity: 1;
-            transition: max-height 2000ms ease-out;
-            transition: opacity ease-in, 0.6s transform ease;
+            transform: translateY(-3px);
+            transition: max-height 1400ms ease-out, opacity 200ms ease-in, 0.6s transform ease;
         }
-        details[open] summary span::after {
+        details[open] summary svg {
             rotate: 90deg;
-            transition: rotate 400ms ease-out;
+            transition: rotate 200ms ease-out;
         }
 
         .infobox-cell {
